describe the version

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>The Menu</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
-
+	s
 <h1>
 <img src="images/icon1.jpg" width="60px" height="50px"> 
 SINIGANG 
@@ -15,24 +17,24 @@ SINIGANG
 
 <h2>Ingredients</h2>
 <dl>
-	<dd>Pork </dd>
-		<dt>-while you can use meatier and leaner parts such as pork shoulder (kasim), I recommend bony cuts such as spare ribs, pork belly with ribs, hocks, knuckles, and tailbone or neck bones for better flavor.</dt>
-	<dd>Tomatoes</dd>
-		<dt>- use ripe, juicy tomatoes</dt>
-	<dd>Onion</dd>
-		<dt>-peeled and quartered</dt>
-	<dd>Fish sauce</dd>
-		<dt>- brings umami flavor; you can swap it with salt if you prefer</dt>
-	<dd>Gabi</dd>
-		<dt>- adds a starchy component to the dish and thickens the broth</dt>
-	<dd>Radish</dd>
-	<dt>- locally known as labanos. It has an elongated and oblong root which is white in color.</dt>
-	<dd>Vegetables</dd>
-		<dt>- the recipe uses sitaw (long beans), eggplant, okra, and bok choy, but feel free to include other local produce available such as kangkong (water spinach) and pechay</dt>
-	<dd>Tamarind</dd>
-		<dt>- can be fresh pods, paste, or powder mixes</dt>
-	<dd>Banana or finger chili peppers (siling haba)</dd>
-		<dt>-adds a mild heat; optional and can be omitted</dt>
+	<dt>Pork </dt>
+		<dd>-while you can use meatier and leaner parts such as pork shoulder (kasim), I recommend bony cuts such as spare ribs, pork belly with ribs, hocks, knuckles, and tailbone or neck bones for better flavor.</dd>
+	<dt>Tomatoes</dt>
+		<dd>- use ripe, juicy tomatoes</dd>
+	<dt>Onion</dt>
+		<dd>-peeled and quartered</dd>
+	<dt>Fish sauce</dt>
+		<dd>- brings umami flavor; you can swap it with salt if you prefer</dd>
+	<dt>Gabi</dt>
+		<dd>- adds a starchy component to the dish and thickens the broth</dd>
+	<dt>Radish</dt>
+	<dd>- locally known as labanos. It has an elongated and oblong root which is white in color.</dd>
+	<dt>Vegetables</dt>
+		<dd>- the recipe uses sitaw (long beans), eggplant, okra, and bok choy, but feel free to include other local produce available such as kangkong (water spinach) and pechay</dd>
+	<dt>Tamarind</dt>
+		<dd>- can be fresh pods, paste, or powder mixes</dd>
+	<dt>Banana or finger chili peppers (siling haba)</dt>
+		<dd>-adds a mild heat; optional and can be omitted</dd>
 </dl>
 
 <h2>Prepare</h2>
